; ModuleID = '/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/ctime/extr_ctime.c_do_chown.c'
source_filename = "/home/carl/AnghaBench/zfs/tests/zfs-tests/tests/functional/ctime/extr_ctime.c_do_chown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"chown(%s, %d, %d) failed with errno %d\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @do_chown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_chown(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  %5 = load i8*, i8** %3, align 8
  %6 = icmp eq i8* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %25

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 (...) @getuid()
  %11 = call i64 (...) @getgid()
  %12 = call i32 @chown(i8* %9, i64 %10, i64 %11)
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %23

14:                                               ; preds = %8
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = call i64 (...) @getuid()
  %18 = trunc i64 %17 to i32
  %19 = call i64 (...) @getgid()
  %20 = trunc i64 %19 to i32
  %21 = load i32, i32* @errno, align 4
  %22 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i8* %16, i32 %18, i32 %20, i32 %21)
  store i32 1, i32* %2, align 4
  br label %25

23:                                               ; preds = %8
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %14, %7
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @chown(i8*, i64, i64) #1

declare dso_local i64 @getuid(...) #1

declare dso_local i64 @getgid(...) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
